--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,6 @@
     <title>API Project</title>
   </head>
   <body>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./JS/main.js"></script>
   </body>
 </html>
