--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>API Project</title>
 </head>
-
 <body>
+  <h1> Disney Characters</h1>
+  <div class="container"></div>
   <script type="module" src="../JS/main.js"></script>
 </body>
 
