--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <h1> Disney Characters</h1>
+  <button class="button"> Next Page --> </button>
   <div class="container"></div>
   <script type="module" src="../JS/main.js"></script>
 </body>
