--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   <h1> Disney Characters</h1>
-  <button class="button"> Next Page --> </button>
+  <button class="button1">  Previous Page </button>
+  <button class="button2"> Next Page --> </button>
   <div class="container"></div>
   <script type="module" src="../JS/main.js"></script>
 </body>
