--- a/app/index.html
+++ b/app/index.html
@@ -5,13 +5,14 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <title>API Project</title>
 </head>
-<body>
-  <h1> Disney Characters</h1>
+<body class="font-walter bg-[#faf4ee] text-center text-[10px] box-border m-0 p-0">
+  <h1 class="text-[40px]"> Disney Characters</h1>
   <button class="button1">  Previous Page </button>
-  <button class="button2"> Next Page --> </button>
-  <div class="container"></div>
+  <button class="button2"> Next Page </button>
+  <div class="container flex flex-wrap justify-evenly"></div>
   <script type="module" src="../JS/main.js"></script>
 </body>
 
