--- a/app/index.html
+++ b/app/index.html
@@ -8,11 +8,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <title>API Project</title>
 </head>
-<body class="font-walter bg-[#faf4ee] text-center text-[10px] box-border m-0 p-0">
-  <h1 class="text-[40px]"> Disney Characters</h1>
-  <button class="button1">  Previous Page </button>
-  <button class="button2"> Next Page </button>
-  <div class="container flex flex-wrap justify-evenly"></div>
+
+<body class="text-[#2d6d71] font-walter bg-[#faf4ee] text-center text-[10px] box-border m-0 p-0">
+  <h1 class="text-[70px]"> Disney Characters</h1>
+  <div class="buttons flex justify-evenly text-[20px] mb-[7px]">
+    <button class="button1 border-2 border-[#2d6d71]"> Previous Page </button>
+    <button class="button2 border-2 border-[#2d6d71]"> Next Page </button>
+  </div>
+  <div class="container w-full flex flex-wrap justify-center px-4 gap-6 mx-auto"></div>
   <script type="module" src="../JS/main.js"></script>
 </body>
 
