--- a/app/index.html
+++ b/app/index.html
@@ -12,11 +12,11 @@
 <body class="text-[#2d6d71] font-walter bg-[#faf4ee] text-center text-[10px] box-border m-0 p-0">
   <h1 class="text-[70px]"> Disney Characters</h1>
   <div class="buttons flex justify-evenly text-[20px] mb-[7px]">
-    <button class="button1 border-2 border-[#2d6d71]"> Previous Page </button>
-    <button class="button2 border-2 border-[#2d6d71]"> Next Page </button>
+    <button class="p-[2px] button1 border-2 border-[#2d6d71]"> Previous Page </button>
+    <button class="p-[2px] button2 border-2 border-[#2d6d71]"> Next Page </button>
   </div>
   <div class="container w-full flex flex-wrap justify-center px-4 gap-6 mx-auto"></div>
-  <script type="module" src="../JS/main.js"></script>
+  <script type="module" src="/JS/main.js"></script>
 </body>
 
 </html>
